--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-ACCES_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
+PORT=4000
+ACCES_TOKEN_SECRET=tu_clave_de_acceso
+REFRESH_TOKEN_SECRET=tu_clave_refresh
+DB_USER=smdb_7by7_user
+DB_HOST=dpg-d0ag51qdbo4c73cevurg-a
+DB_NAME=smdb_7by7
+DB_PASSWORD=DD6zlACRaKJZ0qrVynZNZ5AgMgu2p0Pf
+DB_PORT=5432
