--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "emailjs-com": "^3.2.0",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
@@ -23,8 +24,10 @@
     "jwt-decode": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "pdfkit": "^0.16.0",
     "pg": "^8.13.1",
+    "ws": "^8.18.2",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
   },
